--- a/src/component/DraggableImage/DraggableImage.scss
+++ b/src/component/DraggableImage/DraggableImage.scss
@@ -9,6 +9,7 @@
     // height: 418px;
     width: 100%;
     overflow: scroll;
+    margin-bottom: 70px;
 
     .draggable-image {
         cursor: grab;
