--- a/src/pages/Zone/Zone.scss
+++ b/src/pages/Zone/Zone.scss
@@ -1,6 +1,6 @@
 .zone-container {
     overflow: hidden;
-
+    position: relative;
 
     .content-head {
         background-color: $font-color-dark;
