updated min height

--- a/src/pages/Zone/Zone.scss
+++ b/src/pages/Zone/Zone.scss
@@ -1,6 +1,7 @@
 .zone-container {
     overflow: hidden;
     position: relative;
+    min-height: 100vh;
 
     .content-head {
         background-color: $font-color-dark;
