--- a/src/component/Hotspot/Hotspot.scss
+++ b/src/component/Hotspot/Hotspot.scss
@@ -22,12 +22,12 @@
     }
 
     &.hotspot-available {
-        // animation: blink 0.4s infinite alternate;
+        animation: blink 0.4s infinite alternate;
 
     }
 
     &.hotspot-unavailable {
-        // animation: blink 0.6s infinite alternate;
+        animation: blink 0.6s infinite alternate;
     }
 }
 
