--- a/src/component/Slider/Slider.scss
+++ b/src/component/Slider/Slider.scss
@@ -6,6 +6,7 @@
             height: 240px;
             border-radius: 16px;
             width: calc(100% - 16px);
+            object-fit: contain;
         }
     }
 }
